kubernetes/apps/database/redis/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: master
      app.kubernetes.io/instance: redis
      app.kubernetes.io/name: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home-automation
            k8s:app.kubernetes.io/instance: n8n
            k8s:app.kubernetes.io/name: n8n
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home-automation
            k8s:app.kubernetes.io/controller: paperless
            k8s:app.kubernetes.io/instance: paperless
            k8s:app.kubernetes.io/name: paperless
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home
            k8s:app.kubernetes.io/controller: backend
            k8s:app.kubernetes.io/instance: penpot
            k8s:app.kubernetes.io/name: penpot
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            k8s:app.kubernetes.io/name: redis-migration
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
